--- a/src/App.css
+++ b/src/App.css
@@ -2,15 +2,10 @@
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
 .App-header {
   background-color: #222;
-  height: 150px;
-  padding: 20px;
+  height: 40px;
+  padding: 10px;
   color: white;
 }
 
@@ -18,11 +13,18 @@
   font-size: 1.5em;
 }
 
-.App-intro {
-  font-size: large;
+.app-container {
+  display: flex;
 }
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.app-left-pane {
+  flex: 1;
+  background-color: #222222;
+  color: azure;
+}
+
+.app-right-pane {
+  flex: 4;
+  background-color: black;
+  color: azure;
 }
