--- a/src/components/Tree.css
+++ b/src/components/Tree.css
@@ -1,5 +1,6 @@
 .tree-branch {
-    padding-left: 10px;
+    padding-top: 5px;
+    padding-right: 0;
     text-align: left;
     background-color: darkblue;
 }
