--- a/src/components/Tree.css
+++ b/src/components/Tree.css
@@ -3,4 +3,15 @@
     padding-right: 0;
     text-align: left;
     background-color: darkblue;
+    cursor: pointer;
+}
+
+.tree-branch .sibling {
+    transform: scale(1);
+    margin: 0;
+}
+.tree-branch .current {
+    /*transform: scale(1.3);*/
+    background-color: cadetblue;
+    z-index: 5;
 }
