--- a/src/components/Tree.css
+++ b/src/components/Tree.css
@@ -10,8 +10,14 @@
     transform: scale(1);
     margin: 0;
 }
+
 .tree-branch .current {
     /*transform: scale(1.3);*/
     background-color: cadetblue;
     z-index: 5;
+}
+
+.tree-branch .loading {
+    cursor: progress;
+    color: orange;
 }
