--- a/src/components/Tree.css
+++ b/src/components/Tree.css
@@ -35,3 +35,10 @@
     flex-direction: row-reverse;
 }
 
+.zk-node-edit-buttons-show {
+    visibility: visible;
+}
+
+.zk-node-edit-buttons-hide {
+    visibility: hidden;
+}
