--- a/src/components/Tree.css
+++ b/src/components/Tree.css
@@ -79,3 +79,12 @@
     padding-bottom: 10px;
     padding-left: 20px;
 }
+
+/* style for the expand/collapse icon */
+.zk-node-expand-icon {
+    padding: 0 5px;
+}
+
+.zk-node-foldername {
+
+}
